coq_translation/axiomatized/examples/guessing_game/guessing_game.err
error[E0433]: failed to resolve: use of undeclared crate or module `rand`
  --> examples/guessing_game/guessing_game.rs:10:25
   |
10 |     let secret_number = rand::thread_rng().gen_range(1..=100);
   |                         ^^^^ use of undeclared crate or module `rand`

thread 'rustc' panicked at 'thir failed to compile', lib/src/top_level.rs:674:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
